<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.Android.AppWidget.Container"
    android:layout_width="150dp"
    android:layout_height="150dp"
    android:layout_margin="0dp"
    android:paddingTop="15dp"
    android:paddingHorizontal="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_prayer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/asr"
        android:layout_alignParentStart="true"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/tv_prayer_time_format"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pm"
        android:layout_alignParentEnd="true"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/tv_prayer_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_prayer_time"
        android:layout_below="@id/tv_prayer_name"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>
    <!-- <ImageView
        android:id="@+id/iv_current_prayer"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/img_current_prayer"
        android:layout_below="@id/tv_prayer_time"
        android:textSize="40sp"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/todo"
        android:textStyle="bold"
        android:textColor="@color/white"/> -->
</RelativeLayout>