<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_150pxv"
    android:background="@drawable/img_today_fasting_times_1"
    android:padding="@dimen/_10pxv">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/today_fasting_times"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_marginTop="@dimen/_15pxv"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5pxv"
            android:layout_weight="1"
            app:cardBackgroundColor="#D8FDD2"
            app:cardCornerRadius="@dimen/_15pxv">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80pxv"
                android:background="#D8FDD2">

                <TextView
                    android:id="@+id/tv_sehri_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10pxv"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:text="@string/sehri_time"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="16sp" />

                <LinearLayout
                    android:id="@+id/ll_sehri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_sehri_name"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_sehri_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10pxv"
                        android:layout_marginTop="@dimen/_5pxv"
                        android:text="03:56"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_sehri_time_format"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="@dimen/_5pxv"
                        android:text="@string/am"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <ImageView
                    android:layout_width="@dimen/_70pxv"
                    android:layout_height="@dimen/_70pxv"
                    android:layout_centerInParent="true"
                    android:layout_toEndOf="@+id/ll_sehri"
                    android:src="@drawable/img_sehri" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5pxv"
            android:layout_weight="1"
            app:cardBackgroundColor="#EFD7BE"
            app:cardCornerRadius="@dimen/_15pxv">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80pxv">

                <TextView
                    android:id="@+id/tv_iftar_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10pxv"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:text="@string/iftar_time"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <LinearLayout
                    android:id="@+id/ll_iftar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_iftar_name"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_iftar_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10pxv"
                        android:layout_marginTop="@dimen/_5pxv"
                        android:text="06:15"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_iftar_time_format"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="@dimen/_5pxv"
                        android:text="@string/pm"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <ImageView
                    android:layout_width="@dimen/_70pxv"
                    android:layout_height="@dimen/_70pxv"
                    android:layout_centerInParent="true"
                    android:layout_toEndOf="@+id/ll_iftar"
                    android:src="@drawable/img_iftari" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>